# msgpack-modelica

./: .gitattributes  LICENSE  README.md  impact.json  omc_test.mos
MessagePack/: Examples.mo  Pack.mo  Unpack.mo  UsersGuide.mo  Utilities.mo  package.mo  package.order
MessagePack/Resources/BuildProjects/VisualStudio2010/: msgpack.sln  msgpack.vcxproj  msgpack.vcxproj.filters
MessagePack/Resources/BuildProjects/autotools/: Makefile  Makefile.in  autogen.sh  configure  configure.ac
MessagePack/Resources/C-Sources/: msgpack-modelica.c
MessagePack/Resources/Include/: msgpack-modelica.h
