dnl Init
AC_PREREQ([2.63])
AC_INIT([msgpack-modelica],[X],[https://github.com/modelica-3rdparty/msgpack-modelica/issues],[msgpack-modelica],[https://github.com/modelica-3rdparty/msgpack-modelica])

AC_CONFIG_MACRO_DIR([m4])

if test -z "$CFLAGS"; then
  CFLAGS=-Os
fi
if test -z "$CXXFLAGS"; then
  CXXFLAGS=-Os
fi

AC_LANG([C])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_MAKE_SET

AC_OUTPUT([Makefile])
